fc-service-server/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: federated-catalogue-server
  labels:
    app: federated-catalogue-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: federated-catalogue-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: federated-catalogue-server
    spec:
      containers:
        - name: federated-catalogue-server-image
          image: registry.gitlab.com/gaia-x/data-infrastructure-federation-services/cat/fc-service-image
          imagePullPolicy: Always
          ports:
            - name: "http"
              containerPort: 8090

          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8090
            initialDelaySeconds: 60
            periodSeconds: 30
          resources: {}
      restartPolicy: Always
