fc-service-server/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: federated-catalogue-server-service
  labels:
    app: federated-catalogue-server
spec:
  ports:
    - name: "8090"
      port: 8090
      targetPort: 8090
  selector:
    app: federated-catalogue-server
  type: ClusterIP
